# python-project

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
src/PACKAGENAME/: __init__.py  __main__.py
src/package/: __init__.py
