[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PACKAGENAME"
version = "VERSION"
authors = [{name="Taro Sato", email="okomestudio@gmail.com"}]
description = "REPONAME for Python"
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy==1.15.0",
    "pre-commit==4.2.0",
    "ruff==0.11.2",
]

test = [
    "coverage[toml]==7.7.1",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
]

[project.urls]
"Homepage" = "https://github.com/okomestudio/REPONAME"
"Buck Tracker" = "https://github.com/okomestudio/REPONAME/issues"

[project.scripts]
REPONAME = "PACKAGENAME.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE.txt"]
include-package-data = true
package-data = {"PACKAGENAME" = []}

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "except ImportError",
    "if __name__ == .__main__.:",
    "log(|ging).(debug|info|warning)",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-vv --cov=PACKAGENAME --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
  module = []
  ignore_missing_imports = true
